# kvs

./: Cargo.toml  note.md
benches/: benches.rs
src/: client.rs  error.rs  lib.rs  main.rs  protocol.rs  server.rs
src/engine/: kvs.rs  mod.rs  sled.rs
src/thread_pool/: mod.rs
tests/: cli.rs  kv_store.rs  tests.rs  thread_pool.rs
