[package]
name = "kvs"
version = "0.1.0"
authors = ["Jackey Hua <jackeyhuasjtu@gmail.com>"]
description = "A simple key-value store"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
failure = "0.1.8"
tempfile = "3.19.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
walkdir = "2.5.0"
tempfile = "3.19.0"
